2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Simplified finding the schemas.

2005-12-08  Julien Puydt  <jpuydt@free.fr>

	* src/main_window.cpp: Protected the call to
	gtk_window_set_urgency_hint by a #ifdef to save the win32 build.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/sipendpoint.cpp: Set the NAT binding timeout based on the 
	GConf key.

2005-12-08  Damien Sandras  <dsandras@gnome.org>
	
	* gnomemeeting.schemas.in.in: Increased RTP port range. It can be
	reduced for small installations, or increased further for big
	installations with non symmetric NAT. Added adjustable NAT binding
	refresh timeout.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: A few optimizations.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Added a few hints to make sure you do not 
	have to search for your incoming call popup on all desktops to 
	answer the call.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/pcssendpoint.cpp, src/endpoint.cpp: Fixed bug reported by 
	Christoph Lukas (stats being reset when receiving
	an incoming call while already being in a call).

2005-12-08  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.cpp (GMEndPoint::OnGatewayIPTimeout): Protected a call
	to a gm_conf function from threading, and added a test on ip_checking
	before checking the ip (!)

2005-12-08  Julien Puydt  <jpuydt@free.fr>

	* src/tray.cpp: Added some more #ifndef DISABLE_GNOME #endif to avoid
	warnings about defined functions being unused.

2005-12-07  Julien Puydt  <jpuydt@free.fr>

	* src/tray.cpp: Made the use of the "embedded" signal #ifndef
	DISABLE_GNOME.

2005-12-07  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Made database_save_file more fault-tolerant (but
	still not perfect).

2005-12-07  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Destroy dialog much earlier.

2005-12-07  Damien Sandras  <dsandras@gnome.org>
