@@ -5,7 +5,6 @@ libabout_la_SOURCES =	gnome-about.c			\
 
 INCLUDES =						\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale/"\"        \
-	-DGNOMEMEETING_IMAGES=\""$(datadir)/pixmaps/"\"	\
 	-DSHARE_DIR=\"$(pkgdatadir)\"			\
 	-I$(top_srcdir) 				\
 	$(GNOMEMEETING_LIB_CFLAGS)				
