@@ -12,7 +12,6 @@ libdruid_la_SOURCES =					\
 
 INCLUDES =						\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale/"\"        \
-	-DGNOMEMEETING_IMAGES=\""$(datadir)/pixmaps/"\"	\
 	-DSHARE_DIR=\"$(pkgdatadir)\"			\
 	-I$(top_srcdir) 				\
 	$(GNOMEMEETING_LIB_CFLAGS)				
