@@ -12,7 +12,6 @@ libgmwidgets_la_SOURCES =				\
 
 INCLUDES =						\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale/"\"        \
-	-DGNOMEMEETING_IMAGES=\""$(datadir)/pixmaps/"\"	\
 	-DG_LOG_DOMAIN=\"GnomeMeeting\"		 	\
 	-DSHARE_DIR=\"$(pkgdatadir)\"			\
 	-I$(top_srcdir) 				\
