@@ -1,5 +1,14 @@
 2005-12-11  Julien Puydt  <jpuydt@free.fr>
 
+	* lib/about/Makefile.am, lib/druid/Makefile.am, lib/e-splash.c,
+	lib/Makefile.am, lib/widgets/Makefile.am, lib/xdap/Makefile.am,
+	src/callbacks.cpp, src/chat_window.cpp, src/druid.cpp,
+	src/log_window.cpp, src/main_window.cpp, src/Makefile.am,
+	src/pref_window.cpp, src/tools.cpp: Modified the way pixmaps are
+	found, preparing the way for a nice win32 fix.
+
+2005-12-11  Julien Puydt  <jpuydt@free.fr>
+
 	* lib/gm_conf-glib.c: Simplified finding the schemas.
 
 2005-12-08  Julien Puydt  <jpuydt@free.fr>
